[package]
name = "trackflow_script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
trackflow_lib = { path = "../lib" }
clap = { version = "4.4.11", features = ["derive"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"

[build-dependencies]
sp1-build = "4.0.0"
